package no.nav.helse.bakrommet.nav

data class Saksbehandler(
    val navIdent: String,
    val navn: String,
    val preferredUsername: String,
)
