@startuml

package Sykepenger {
    class Sykefraværstilfelle

    class Sykepengegrunnlag

    class Beregning

    interface Yrkesaktivitetsperiode

    class NaturligIdent as "Naturlig ident"

    class Yrkesaktivitet {
        Vernepliktig
        Arbeidstaker
        Frilanser
        Arbeidsledig
        Næringsdrivende
    }

    class Rettighetskategori {
        Inaktiv
        Vernepliktig
        Arbeidstaker
        Frilanser
        Arbeidsledig
        Næringsdrivende
        Kombinert
    }

    class Inntektsgrunnlag

    class Sykepengevilkår
    class Inngangsvilkår
    class LøpendeVilkår as "Løpende vilkår"

    class Sykepengesøknad
}

package Saksbehandling {
    class Saksbehandler

    class Behandling

    class Vilkårsvurdering
}


Behandling --> Yrkesaktivitetsperiode: omfatter en eller flere
Behandling --> Sykefraværstilfelle: inngår i et
Sykefraværstilfelle --> Sykepengegrunnlag: har 0 eller ett
Sykepengegrunnlag --> Inntektsgrunnlag: består av 0, en eller flere
Yrkesaktivitet --> Inntektsgrunnlag: har 0 eller en
Yrkesaktivitet --> NaturligIdent: knyttet til en
Sykefraværstilfelle <-- Yrkesaktivitet: tilhører et
Sykefraværstilfelle --> Rettighetskategori: Faller innunder en
Sykefraværstilfelle --> Inngangsvilkår: har et sett med
Yrkesaktivitetsperiode --> LøpendeVilkår: har et sett med

Behandling <-- Vilkårsvurdering: tilhører en
Yrkesaktivitetsperiode --> Yrkesaktivitet: tilhører én
Sykepengesøknad --> Yrkesaktivitetsperiode: ligger til grunn for
Behandling --> Beregning: har 0 eller en
'Rettighetskategori --> Sykepengevilkår: har et sett med
Vilkårsvurdering --> Sykepengevilkår: vurdering av
Inngangsvilkår --> Sykepengevilkår: er et
LøpendeVilkår --> Sykepengevilkår: er et

hide empty members
hide circle

@enduml
